# Uiharu

./: README.md  main.py  prompt.txt  pyproject.toml  requirements.txt
Poe/: __init__.py  chat.py  poe.py
cogs/: asking.py  identifying.py  moderating.py
core/: bot.py  conversations.py  nicknames.py  utils.py
